# myQR

./: .gitignore  README.md  pyproject.toml
myqr/: fileOps.py  main.py  myqr_streamlit.py
