[tool.poetry]
name = "myqr"
version = "0.1.2"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.11"
python = "^3.10"
streamlit = "^1.40.2"
typer = "^0.15.1"
rich = "^13.9.4"
black = "^24.10.0"
qrcode = "^8.0"
image = "^1.5.33"


[tool.poetry.scripts]
myqr = "myqr.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
