[tool.poetry]
name = "myqr"
version = "0.1.4"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.11"
python = "^3.10"
streamlit = "^1.40.2"
typer = "^0.15.1"
#dev rich = "^13.9.4"
rich = "^14.0.0"
qrcode = "^8.0"
image = "^1.5.33"
black = "^25.1.0"
django = "^5.1.8"


[tool.poetry.scripts]
myqr = "myqr.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
