[tool.poetry]
name = "myqr"
version = "0.1.4"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.46.1"
typer = "^0.16.0"
rich = "^14.0.0"
qrcode = "^8.2"
image = "^1.5.33"
black = "^25.1.0"
django = "^5.2.3"


[tool.poetry.scripts]
myqr = "myqr.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
